src/objects/Quote__c.object
<CustomObject>
    <fields>
        <fullName>AdditionalTotal__c</fullName>
        <label>Additional Total</label>
        <summarizedField>QuoteLine__c.Amount__c</summarizedField>
        <summaryFilterItems>
            <field>QuoteLine__c.IsAdditional__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>QuoteLine__c.Quote__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>BufferRate__c</fullName>
        <defaultValue>0.2</defaultValue>
        <label>Buffer Rate</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Currency__c</fullName>
        <label>Currency</label>
        <picklist>
            <picklistValues>
                <fullName>USD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RMB</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer</label>
        <referenceTo>Customer__c</referenceTo>
        <relationshipLabel>Quotes</relationshipLabel>
        <relationshipName>Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DisplayAmount__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Display Amount</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IncludeBuffer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Include Buffer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>MProject__c</referenceTo>
        <relationshipLabel>Quotes</relationshipLabel>
        <relationshipName>Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>StandardTotal__c</fullName>
        <label>Standard Total</label>
        <summarizedField>QuoteLine__c.Amount__c</summarizedField>
        <summaryFilterItems>
            <field>QuoteLine__c.IsAdditional__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>QuoteLine__c.Quote__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Pending</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contract Issued</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Invoice Released</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Payment Received</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Total__c</fullName>
        <formula>IF( DisplayAmount__c == true &amp;&amp; NOT(ISNULL( UnitPrice__c )),
UnitPrice__c *  StandardTotal__c + AdditionalTotal__c ,
 StandardTotal__c + AdditionalTotal__c 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UnitPrice__c</fullName>
        <label>Unit Price</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Quote</label>
    <nameField>
        <displayFormat>Q{000000}</displayFormat>
        <label>Quote #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Quotes</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>